Fixed drawer overflow scroll issue

--- a/src/App.css
+++ b/src/App.css
@@ -46,13 +46,14 @@ h1 {
 	);
 	width: 20%;
 	height: 70%;
-	position: fixed;
+	position: absolute;
 	top: 25%;
 	right: 2%;
 	border: 4px solid;
 	border-radius: 20px;
 	margin-left: 10px;
-	/* z-index: ; */
+	overflow-y: hidden;
+	overscroll-behavior-y: contain;
 }
 
 .background-wrapper {
@@ -91,6 +92,8 @@ h1 {
 .box2 {
 	background: rgba(255, 255, 255, 0);
     flex: 1;
+	overflow: hidden;
+	
 }
 
 .awesome-button {
